// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basicModule 1`] = `
"/**
 * DO NOT MANUALLY EDIT; this file is fully generated.
 *
 * SOURCE<<TEST>>
 * SIGNED<<ar/bH7z5l9g72SSLO3BEdMkyIlMav6HYcBqY41p6bk7N6wgpHHLqdqGklakJMgL94G081APyKl/R9ZbSalg9tA==>>
 */
export const exportedVariable: string;
const immutableVariable: string | undefined = \\"TEST\\";
let immutableVariable: number | null = 1;
"
`;

exports[`emptyModule 1`] = `
"/**
 * DO NOT MANUALLY EDIT; this file is fully generated.
 *
 * SOURCE<<TEST>>
 * SIGNED<<vmiIOMqGhuXJBom/KrWFzvETfJmbSMcLkvZ6XDTcFWl7XRHJgu1tcb4eHn97TgcziEqpfD96M5qO0DV3z3S+CQ==>>
 */
"
`;
